# Scarabeus

./: README.md  meson.build  scarabeus.doap
data/: gresource.xml
data/ui/: main-window.blp  meson.build
data/ui/pages/: main-page.blp  meson.build  result-page.blp
src/: app.vala  meson.build
src/ui/: main-window.vala  meson.build
src/ui/pages/: main-page.vala  meson.build  result-page.vala
